--- a/gmcMHD.ipynb
+++ b/gmcMHD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "alike-acrylic",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "possible-indie",
    "metadata": {
     "scrolled": true
@@ -47,15 +47,15 @@
     "    try:\n",
     "        mStar = np.float64(np.array(f[\"PartType5\"][\"Masses\"]))     #reads file\n",
     "    except: \n",
-    "        mStar = 0                 #If there are no stars, the mass is zero.\n",
+    "        mStar = [0]                #If there are no stars, the mass is zero.\n",
     "    try:\n",
     "        vStar =  np.float64(np.array(f[\"PartType5\"][\"Velocities\"]))\n",
     "    except: \n",
-    "        vStar = 0\n",
+    "        vStar = [0]\n",
     "    try:\n",
     "        gpotStar = np.float64(np.array(f[\"PartType5\"][\"Potential\"]))\n",
     "    except:\n",
-    "        gpotGas = 0\n",
+    "        gpotStar = [0]\n",
     "    finally:\n",
     "        mGas = np.float64(np.array(f[\"PartType0\"][\"Masses\"]))\n",
     "        vGas = np.float64(np.array(f[\"PartType0\"][\"Velocities\"]))\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "veterinary-battlefield",
    "metadata": {},
    "outputs": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "realistic-rapid",
    "metadata": {},
    "outputs": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "vietnamese-sport",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "identified-narrow",
    "metadata": {},
    "outputs": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "id": "undefined-diesel",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "id": "backed-remark",
    "metadata": {},
    "outputs": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "id": "graduate-reset",
    "metadata": {},
    "outputs": [
